# brainhuck

./: .gitignore  README.md  brainhuck.cabal  brainhug.cabal
app/: Main.hs
src/: Brainfuck.hs  Free.hs  SimpleParser.hs
