name:                brainhug
version:             0.1.0.0
synopsis:            A Brainfuck interpreter written in Haskell
description:         Please see README.md
homepage:            http://github.com/flannelhead/brainhug#readme
license:             MIT
license-file:        LICENSE
author:              Sakari Kapanen
maintainer:          sakari.m.kapanen@gmail.com
copyright:           2015 Sakari Kapanen
category:            Programming languages
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleParser, Brainfuck, Free
  build-depends:       base >= 4.7 && < 5
                     , parsec == 3.1.9.*
                     , vector == 0.10.12.*
                     , free == 4.12.1.*
  default-language:    Haskell2010

executable brainhug
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brainhug
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/flannelhead/brainhug
